Wed Oct 10 14:16:01 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/mesher/ds
	  src/org/jcae/mesh/mesher/algos1d: Move remaining bits from ancient
	data structure into src/org/jcae/mesh/amibe.

Wed Oct 10 00:35:43 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java (collapse): Fix
	method to also work for non-manifold meshes.
	* src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java (split): Fix
	method to also work for non-manifold meshes.
	* src/org/jcae/mesh/amibe/ds/AbstractHalfEdge.java: New
	getAdjNonManifold() method to hide implementation of adjacency
	relations in non-manifold meshes.

Tue Oct  9 13:48:33 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/HalfEdge.java (split): Fix
	method to also work for non-manifold meshes.
	* src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java (canCollapse): Fix
	method to also work for non-manifold meshes.

Mon Oct  8 14:46:45 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Vertex.java (appendNeighboursTri): Do
	not filter out mesh.outerVertex so that current check can also
	prevent removing a non-boundary edge for which both endpoints are
	on boundary.
	* src/org/jcae/mesh/amibe/ds/HalfEdge.java (canCollapse): Fix
	method to also work for non-manifold meshes.

Sat Oct  6 21:21:08 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/HalfEdge.java (collapse): Fix edge
	collapse for non-manifold meshes.
	* src/org/jcae/mesh/amibe/ds/Mesh.java: New canCollapseEdge(),
	edgeCollapse(), vertexSplit() and edgeSwap() methods.
	* src/org/jcae/mesh/amibe/ds/HalfEdge.java
	  src/org/jcae/mesh/amibe/ds/AbstractHalfEdge.java
	  src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java: Restrict access,
	algorithms must now use methods added just above in Mesh.

Thu Oct  4 11:05:49 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
